# deep_research

./: .gitignore  README.md  list_models.py  pyproject.toml  requirements.txt  streamlit_app.py  verify_gemini.py
.github/: dependabot.yml
src/deep_research/: __init__.py  __main__.py  config.py  graph.py  llm.py  persistence.py  prompts.py  retry.py  state.py  tools.py
src/deep_research/nodes/: planner.py  researcher.py  reviewer.py  scoper.py  synthesizer.py
